# untangling-number

./: .gitignore  Makefile  README.md  pyproject.toml  rluntanglenumber.ipynb
crossing-reduction/: explore_variant_sweep_results.ipynb  generate_t_backtrack_pool.py  generated_T_pd_backtrack.txt  generated_T_pd_backtrack_1M.parquet  generated_T_pd_backtrack_1M.txt  generated_pd_backtrack.txt  run_variant_sweep.py  small-jones.txt  summarize_success.py
crossing-reduction/.cache/matplotlib/: fontlist-v390.json
